Fixed button sizing on tablet and above.

--- a/main.css
+++ b/main.css
@@ -383,4 +383,9 @@ footer p, footer div, footer a {
   h3, input.with-people-submit-button, input.without-keyword-submit-button, input.with-keyword-submit-button, div.bottom-left h3 {
     font-size: 16px;
   }
+
+  div.fetch-more-films-button, div.new-search-button {
+  padding-left: 30%;
+  padding-right: 30%;
+}
 }
